--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,9 @@
-anyio==3.7.0
-click==8.1.3
-contourpy==1.0.7
-cycler==0.11.0
-fastapi==0.98.0
-fonttools==4.38.0
-h11==0.14.0
-httptools==0.5.0
-idna==3.4
-install==1.3.5
-kiwisolver==1.4.4
-matplotlib==3.7.0
-mysql-connector-python==8.0.32
-numpy==1.24.2
-pandas==1.5.3
-Pillow==9.4.0
-pydantic==1.10.9
-pyparsing==3.0.9
-python-dotenv==1.0.0
-pytz==2022.7.1
-PyYAML==6.0
-scipy==1.10.1
-seaborn==0.12.2
-sniffio==1.3.0
-starlette==0.27.0
-typing_extensions==4.6.3
-uvicorn==0.22.0
-watchfiles==0.19.0
-websockets==11.0.3
+fastapi
+matplotlib
+numpy
+pandas
+python-dotenv
+pytz
+scipy
+seaborn
+uvicorn
